#80 make count and deleteAll transactional